[gd_scene load_steps=8 format=3 uid="uid://b2uo2q0myx2fo"]

[ext_resource type="PackedScene" uid="uid://dqefed52f4s6k" path="res://resources/objects/enitity/items/Item.tscn" id="1_g30gj"]
[ext_resource type="Texture2D" uid="uid://cgi880wqef3wk" path="res://assets/textures/projecttiles/brick_1.png" id="2_bkmj8"]
[ext_resource type="Script" uid="uid://bde5e6tqcrjgl" path="res://resources/objects/enitity/items/birck/Brick.gd" id="2_lh865"]
[ext_resource type="PackedScene" uid="uid://c1yjs6j4jxnha" path="res://resources/overlap/throwable/Throwable.tscn" id="4_trngp"]
[ext_resource type="PackedScene" uid="uid://cfdvm6q5tp67i" path="res://resources/overlap/hit/Hurtbox.tscn" id="5_gsvuy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j4tn0"]
radius = 2.0
height = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gsvuy"]
radius = 3.0
height = 10.0

[node name="Brick" instance=ExtResource("1_g30gj")]
collision_layer = 8
collision_mask = 4
script = ExtResource("2_lh865")

[node name="SpriteBox" parent="." index="0"]
texture = ExtResource("2_bkmj8")

[node name="CollisionShape2D" parent="." index="1"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_j4tn0")

[node name="FootMarker" parent="." index="2"]
position = Vector2(0, 3)

[node name="Throwable" parent="." index="3" instance=ExtResource("4_trngp")]

[node name="Hurtbox" parent="." index="4" instance=ExtResource("5_gsvuy")]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_gsvuy")
debug_color = Color(0.84740543, 0.24598578, 0.71292126, 0.41960785)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]

[editable path="SpriteBox"]
[editable path="Throwable"]
[editable path="Hurtbox"]
